--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 body {
   margin: 0; /* remove default margin */
   height: 100vh; /* full viewport height */
-  background-image: url('./assets/background.jpg');
+  background-image: url('./assets/background1.jpg');
   background-size: cover; /* cover whole screen */
   background-position: center;
   background-repeat: no-repeat;
